CUDA C++ Optimal/results/compilation_logs/compile_size_42_reg_16_20250812_1924.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=16 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_global_4layers_v100.exe aco_cuda_global_4layers_v100.cu -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=16 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_global_4layers_v100.cu(108): error: identifier "__sin" is undefined
      double sin_r = __sin(r);
                     ^

aco_cuda_global_4layers_v100.cu(225): warning #68-D: integer conversion resulted in a change of sign
          hashTable[i].key = -1;
                             ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

1 error detected in the compilation of "aco_cuda_global_4layers_v100.cu".
aco_cuda_global_4layers_v100.cu
========== COMPILATION END ========== 
Exit code: 2 
